--- a/resume.qmd
+++ b/resume.qmd
@@ -1,86 +1,52 @@
 ---
 layout: cv
-title: Isaac Newtons's CV
+title: Yuseong Son's CV
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Yuseong Son
+Computer Science, Software Engineer, Full Stack, Machine Learning
 
 <div id="webaddress">
-<a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
+<a href="isaac@applesdofall.org">ldsysson0429@gmail.com</a>
 | <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
 </div>
 
 
 ## Currently
 
-Standing on the shoulders of giants
+Brigham Young University - Idaho
 
 ### Specialized in
 
-Laws of motion, gravitation, minting coins, disliking [Robert Hooke](http://en.wikipedia.org/wiki/Robert_Hooke)
+Java, JavaScript, Css, Html, Python
 
 
-### Research interests
+### Interests
 
-Cooling, power series, optics, alchemy, planetary motions, apples.
+AI, Machine Learning
 
 
 ## Education
 
-`1654-1660`
-__The King's School, Grantham.__
+`2012 - 2018`
+__Myeondeak High Shcool__
 
-`June 1661 - now`
-__Trinity College, Cambridge__
+`2022 - now`
+__Brigham Young University - Idaho__
 
-- Sizar
+- Student
 
-`1667 - death`
-__Trinity College, Cambridge__
+`2019 - 2021`
+__LDS Mission, Sydney__
 
-- Fellow
+- Missionary
 
+`2023 - 2024`
+__Military Service__
 
-
-## Awards
-
-`2012`
-President, *Royal Society*, London, UK
-
-Associate, *French Academy of Science*, Paris, France
+- Sergeant
 
 
 
-## Publications
-
-<!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
-
-### Journals
-
-`1669`
-Newton Sir I, De analysi per æquationes numero terminorum infinitas. 
-
-`1669`
-Lectiones opticæ.
-
-etc. etc. etc.
-
-### Patents
-
-`2012`
-Infinitesimal calculus for solutions to physics problems, [SMBC](http://www.techdirt.com/articles/20121011/09312820678/if-patents-had-been-around-time-newton.shtml) patent 001
-
-
-## Occupation
-
-`1600`
-__Royal Mint__, London
-
-- Warden
-- Minted coins
-
-`1600`
-__Lucasian professor of Mathematics__, Cambridge University
 
 
 
